--- a/core/templates/website/contact.html
+++ b/core/templates/website/contact.html
@@ -24,6 +24,12 @@
 <section class="contact-page-area section-gap">
 	<div class="container">
 		<div class="row">
+			{% if not google_maps_api_key %}
+			<div class="alert alert-warning w-100" role="alert">
+				Google Maps is disabled because GOOGLE_MAPS_API_KEY is missing. Add it to your `.env` file to enable
+				the map.
+			</div>
+			{% endif %}
 			<div class="map-wrap" style="width:100%; height: 445px;" id="map" data-lat="46.080565" data-lng="18.211856"
 				data-title="MIK PTE"></div>
 			<div class="col-lg-4 d-flex flex-column address-wrap">
