--- a/core/templates/website/about.html
+++ b/core/templates/website/about.html
@@ -29,12 +29,12 @@
 			</div>
 			<div class="col-lg-6 info-right">
 				<h6>About Us</h6>
-				<h1>Who We Are?</h1>
+				<h1>Who We Are</h1>
 				<p>
-					Here, I focus on a range of items and features that we use in life without giving them a second
-					thought. such as Coca Cola. Dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-					incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-					ullamco.
+					BuzzBlog is an independent digital newsroom focused on clear, verified reporting.
+					We cover local stories, campus life, and emerging tech with the goal of keeping our
+					community informed and engaged. Our editors and contributors work to publish fast,
+					accurate, and fair coverage every day.
 				</p>
 			</div>
 		</div>
@@ -42,14 +42,14 @@
 </section>
 <!-- End about-info Area -->
 
-<!-- Start other-issue Area -->
+<!-- Start leadership Area -->
 <section class="other-issue-area section-gap">
 	<div class="container">
 		<div class="row d-flex justify-content-center">
 			<div class="menu-content pb-70 col-lg-9">
 				<div class="title text-center">
-					<h1 class="mb-10">Other issues we can help you with</h1>
-					<p>We all live in an age that belongs to the young at heart. Life that is.</p>
+					<h1 class="mb-10">Leadership Team</h1>
+					<p>Meet the editors and builders guiding BuzzBlog?s newsroom.</p>
 				</div>
 			</div>
 		</div>
@@ -60,10 +60,10 @@
 						<img class="img-fluid" src="{% static 'img/default.jpg' %}" alt="">
 					</div>
 					<a href="#">
-						<h4>Rent a Car</h4>
+						<h4>Editor-in-Chief</h4>
 					</a>
 					<p>
-						The preservation of human life is the ultimate value, a pillar of ethics and the foundation.
+						Sets editorial direction, ensures accuracy, and leads our daily coverage strategy.
 					</p>
 				</div>
 			</div>
@@ -73,10 +73,10 @@
 						<img class="img-fluid" src="{% static 'img/default.jpg' %}" alt="">
 					</div>
 					<a href="#">
-						<h4>Cruise Booking</h4>
+						<h4>Managing Editor</h4>
 					</a>
 					<p>
-						I was always somebody who felt quite sorry for myself, what I had not got compared.
+						Coordinates the newsroom schedule, assigns stories, and drives on-time publishing.
 					</p>
 				</div>
 			</div>
@@ -86,10 +86,10 @@
 						<img class="img-fluid" src="{% static 'img/default.jpg' %}" alt="">
 					</div>
 					<a href="#">
-						<h4>To Do List</h4>
+						<h4>Investigations Lead</h4>
 					</a>
 					<p>
-						The following article covers a topic that has recently moved to center stageƒ?"at least it seems.
+						Oversees long-form reporting, fact-checking, and sensitive story verification.
 					</p>
 				</div>
 			</div>
@@ -99,15 +99,15 @@
 						<img class="img-fluid" src="{% static 'img/default.jpg' %}" alt="">
 					</div>
 					<a href="#">
-						<h4>Food Features</h4>
+						<h4>Tech &amp; Product Lead</h4>
 					</a>
 					<p>
-						There are many kinds of narratives and organizing principles. Science is driven by evidence.
+						Builds tools for journalists, improves UX, and powers data-driven storytelling.
 					</p>
 				</div>
 			</div>
 		</div>
 	</div>
 </section>
-<!-- End other-issue Area -->
+<!-- End leadership Area -->
 {% endblock %}
