--- a/core/staticfiles/css/blogApi/blog-home.css
+++ b/core/staticfiles/css/blogApi/blog-home.css
@@ -109,6 +109,11 @@
 		border-radius: 20px;
 	}
 
+	.create-post-widget .primary-btn,
+	.filter-widget .primary-btn {
+		border-radius: 20px;
+	}
+
 	.comment-verify-note {
 		font-size: 12px;
 		color: #856404;
