--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -6,7 +6,7 @@
     <!-- Mobile Specific Meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon-->
-    <link rel="shortcut icon" href="{% static 'img/fav.png' %}">
+    <link rel="shortcut icon" href="{% static 'img/logo.png' %}">
     <!-- Author Meta -->
     <meta name="author" content="AMIR">
     <!-- Meta Description -->
@@ -158,7 +158,15 @@
                                     <button class="btn bb-btn" type="submit"><span
                                             class="lnr lnr-location"></span></button>
                                 </div>
-                                <div class="mt-10 info"></div>
+                                <div class="mt-10 info">
+                                    {% if messages %}
+                                    {% for message in messages %}
+                                    {% if "newsletter" in message.tags %}
+                                    <div class="{{ message.tags }}">{{ message }}</div>
+                                    {% endif %}
+                                    {% endfor %}
+                                    {% endif %}
+                                </div>
                             </form>
                         </div>
                     </div>
@@ -167,14 +175,14 @@
                     <div class="single-footer-widget mail-chimp">
                         <h6 class="mb-20">InstaFeed</h6>
                         <ul class="instafeed d-flex flex-wrap">
-                            <li><img src="{% static 'img/i1.jpg' %}" alt=""></li>
-                            <li><img src="{% static 'img/i2.jpg' %}" alt=""></li>
-                            <li><img src="{% static 'img/i3.jpg' %}" alt=""></li>
-                            <li><img src="{% static 'img/i4.jpg' %}" alt=""></li>
-                            <li><img src="{% static 'img/i5.jpg' %}" alt=""></li>
-                            <li><img src="{% static 'img/i6.jpg' %}" alt=""></li>
-                            <li><img src="{% static 'img/i7.jpg' %}" alt=""></li>
-                            <li><img src="{% static 'img/i8.jpg' %}" alt=""></li>
+                            <li><a href=""><img src="{% static 'img/default.jpg' %}" alt=""></a></li>
+                            <li><a href=""><img src="{% static 'img/default.jpg' %}" alt=""></a></li>
+                            <li><a href=""><img src="{% static 'img/default.jpg' %}" alt=""></a></li>
+                            <li><a href=""><img src="{% static 'img/default.jpg' %}" alt=""></a></li>
+                            <li><a href=""><img src="{% static 'img/default.jpg' %}" alt=""></a></li>
+                            <li><a href=""><img src="{% static 'img/default.jpg' %}" alt=""></a></li>
+                            <li><a href=""><img src="{% static 'img/default.jpg' %}" alt=""></a></li>
+                            <li><a href=""><img src="{% static 'img/default.jpg' %}" alt=""></a></li>
                         </ul>
                     </div>
                 </div>
@@ -202,7 +210,7 @@
     <script src="{% static 'js/popper.min.js' %}"></script>
     <script src="{% static 'js/vendor/bootstrap.min.js' %}"></script>
     {% if google_maps_api_key %}
-    <script src="https://maps.googleapis.com/maps/api/js?key={{ google_maps_api_key }}"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key={{ google_maps_api_key }}&loading=async"></script>
     {% endif %}
     <script src="{% static 'js/jquery-ui.js' %}"></script>
     <script src="{% static 'js/easing.min.js' %}"></script>
